[package]
name = "cigzip"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
rust-htslib = { version = "0.46.0", default-features = false } # Don't update it, see https://github.com/rust-bio/rust-htslib/issues/434
flate2 = "1.1.2"

lib_wfa2 = { path = "/Users/hasitha/Documents/biology/lib_wfa2"}
#lib_wfa2 = { git = "https://github.com/AndreaGuarracino/lib_wfa2"}

lib_tracepoints = { path = "/Users/hasitha/Documents/biology/lib_tracepoints"}
#lib_tracepoints = { git = "https://github.com/AndreaGuarracino/lib_tracepoints"}

log = "0.4.27"
env_logger = "0.11.8"

rayon = "1.10.0" # Parallel processing library
libc = "0.2.172"

indicatif="0.17.11"
